Fix header vertical alignment, make footer fixed

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@ body{
 
 header{
     background-color: #2196F3;
-    height: 56px;
+    height: 48px;
+    line-height: 48px;
     position: -webkit-sticky;
     position: sticky;
     top: 0px;
@@ -21,15 +22,17 @@ header{
     color: #FFFFFF;
     font-weight: 500;
     font-size: 20px;
+    margin: 0px;
 }
 
-.ButtonBar li{
+.ButtonBar{
     list-style-type: none;
     box-sizing: border-box;
-    margin: 0px 8px;
+    margin: 0px;
 }
-                    
+
 #Actions li{
+    margin: 0px 8px;
     float: right;
 }
 
@@ -82,7 +85,7 @@ header{
 }
 
 #Avatar:hover{
-    box-shadow: 0px 2px 15px 2px #444444;
+    box-shadow: 0px 2px 15px 2px #696969;
 }
 
 #Avatar:active{
@@ -146,6 +149,10 @@ footer{
     background-color: #2196F3;
     font-size: 12px;
     color: #FFFFFF;
+    position: fixed;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
     padding: 16px 8px;
 }
 
